--- a/app/src/main/res/layout/fragment_creat_load_fragment.xml
+++ b/app/src/main/res/layout/fragment_creat_load_fragment.xml
@@ -123,6 +123,7 @@
                 android:paddingTop="20dp"
                 android:textCursorDrawable="@null"
                 android:textSize="16sp" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
@@ -130,13 +131,15 @@
             android:layout_width="297dp"
             android:layout_height="57dp"
             android:layout_marginTop="20dp"
+            android:layout_marginBottom="40dp"
             android:background="@drawable/custom_button"
             android:text="Yük İlanını Oluştur"
             android:textAllCaps="false"
             android:textSize="19sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/loadExplanation"
             app:layout_constraintStart_toStartOf="@+id/loadExplanation"
-            app:layout_constraintTop_toBottomOf="@+id/loadExplanation" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/drowdown"
@@ -222,6 +225,18 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/alisTarihi"
             app:layout_constraintTop_toBottomOf="@+id/alisTarihi" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_marginTop="20dp"
+            android:onClick="choosePicture"
+            app:srcCompat="@drawable/detay_resim"
+            app:layout_constraintEnd_toEndOf="@+id/loadExplanation"
+            app:layout_constraintHorizontal_bias="0.489"
+            app:layout_constraintStart_toStartOf="@+id/loadExplanation"
+            app:layout_constraintTop_toBottomOf="@+id/loadExplanation" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
