--- a/app/src/main/res/layout/tasimalar_recycler_row.xml
+++ b/app/src/main/res/layout/tasimalar_recycler_row.xml
@@ -2,127 +2,149 @@
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/recyclerRowCardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="15dp"
+    android:layout_margin="10dp"
     app:cardCornerRadius="30dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15sp"
-        android:orientation="vertical">
+        android:layout_height="170dp">
+
 
         <TextView
             android:id="@+id/recyclerRowLoadTitle"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
             android:padding="5dp"
             android:text="Ev"
             android:textColor="@color/black"
             android:textSize="20dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
+            android:layout_width="122dp"
+            android:layout_height="84dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
+            android:elevation="20dp"
+            app:cardCornerRadius="25dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/recyclerRowImageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:elevation="15dp"
+                android:src="#000000" />
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/rec1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
+            android:padding="5dp"
+            android:text="Nereden : "
+            android:textSize="13sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recyclerRowLoadTitle" />
 
-            <TextView
-                android:id="@+id/rec1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:padding="5dp"
-                android:text="Nereden : "
-                android:textSize="13sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/recyclerRowFromWhere"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:padding="5dp"
-                android:text="kocaeli"
-                android:textSize="12sp" />
-        </LinearLayout>
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/recyclerRowFromWhere"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginStart="5dp"
+            android:padding="5dp"
+            android:text="kocaeli"
+            android:textSize="12sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/rec1"
+            app:layout_constraintStart_toEndOf="@+id/rec1" />
 
-            <TextView
-                android:id="@+id/rec2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:padding="5dp"
-                android:text="Nereye : "
-                android:textSize="13sp"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/rec2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
+            android:padding="5dp"
+            android:text="Nereye : "
+            android:textSize="13sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rec1" />
 
-            <TextView
-                android:id="@+id/recyclerRowToWhere"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:padding="5dp"
-                android:text="ödalwödlşaöwödşöawdlaöşdwşaödşa"
-                android:textSize="12sp" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/recyclerRowToWhere"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:padding="5dp"
+            android:text="ödalwödlşaöwödşöawd"
+            android:textSize="12sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/rec2"
+            app:layout_constraintStart_toEndOf="@+id/rec2" />
 
-            <TextView
-                android:id="@+id/rec3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_marginBottom="5dp"
-                android:padding="5dp"
-                android:text="Alış Tarihi : "
-                android:textSize="14sp"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/rec3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
+            android:padding="5dp"
+            android:text="Alış Tarihi :"
+            android:textSize="13sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rec2" />
 
-            <TextView
-                android:id="@+id/recyclerRowTakeDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:padding="5dp"
-                android:text="ödalwöd"
-                android:textSize="12sp" />
+        <TextView
+            android:id="@+id/recyclerRowTakeDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:padding="5dp"
+            android:text="ödalwöd"
+            android:textSize="12sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/rec3"
+            app:layout_constraintStart_toEndOf="@+id/rec3" />
 
-            <TextView
-                android:id="@+id/rec4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:padding="5dp"
-                android:paddingEnd="0dp"
-                android:text="Teslim Tarihi : "
-                android:textSize="13sp"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/rec4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:padding="5dp"
+            android:paddingEnd="0dp"
+            android:text="Teslim Tarihi : "
+            android:textSize="13sp"
+            android:textStyle="bold"
+            app:layout_constraintBaseline_toBaselineOf="@+id/recyclerRowTakeDate"
+            app:layout_constraintStart_toEndOf="@+id/recyclerRowTakeDate" />
 
-            <TextView
-                android:id="@+id/recyclerRowGiveDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:padding="5dp"
-                android:text="09/10/2023"
-                android:textSize="12sp" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/recyclerRowGiveDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:padding="5dp"
+            android:text="09/10/2023"
+            android:textSize="12sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/rec4"
+            app:layout_constraintStart_toEndOf="@+id/rec4" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.cardview.widget.CardView>
