--- a/app/src/main/res/layout/tasimalar_recycler_row.xml
+++ b/app/src/main/res/layout/tasimalar_recycler_row.xml
@@ -11,24 +11,27 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="170dp">
+        android:layout_height="wrap_content">
 
 
         <TextView
             android:id="@+id/recyclerRowLoadTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
             android:padding="5dp"
             android:text="Ev"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/cardView2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardView2"
             android:layout_width="122dp"
             android:layout_height="84dp"
             android:layout_marginTop="15dp"
@@ -100,14 +103,12 @@
             android:id="@+id/rec3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
             android:padding="5dp"
             android:text="Alış Tarihi :"
             android:textSize="13sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/rec2"
             app:layout_constraintTop_toBottomOf="@+id/rec2" />
 
         <TextView
