--- a/app/src/main/res/layout/fragment_load_detail.xml
+++ b/app/src/main/res/layout/fragment_load_detail.xml
@@ -291,6 +291,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="teklif ver"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout3"></Button>
         </androidx.constraintlayout.widget.ConstraintLayout>
